fix: too small font-size on blog-post

--- a/src/scss/components/_blog-post.scss
+++ b/src/scss/components/_blog-post.scss
@@ -119,8 +119,7 @@
 
   // Content section
   &-content {
-    font-size: font-size('sm');
-    line-height: 1.7;
+    line-height: 1.8;
     color: var(--mw-text-primary-color);
 
     a {
